--- a/doc/_doc1/docs/t4.md
+++ b/doc/_doc1/docs/t4.md
@@ -48,9 +48,9 @@ __NEXT STEPS:__ You can try out more Template projects (type `mbake`). You can a
 
 Definitely look at:
 
-- <a href='https://github.com/metabake/_mBake/tree/master/awesomeReference' target='_blank'>Awesome list of Metabake resources</a>
+- <a href='https://github.com/MetaBake/_mBake/tree/master/awesomeReference' target='_blank'>Awesome list of MetaBake resources</a>
 
-- [Advanced reference and examples](https://github.com/metabake/Meta/tree/master/advancedReference)
+- [Advanced reference and examples](https://github.com/MetaBake/Meta/tree/master/advancedReference)
 
 - <https://git.MetaBake.org>.
 
