--- a/doc/_doc1/docs/t3.md
+++ b/doc/_doc1/docs/t3.md
@@ -22,7 +22,7 @@ We assume that you have already installed the example `website` project as descr
 
             script.
                 doSomething(arg) {
-                    console.log('arg: ', arg)
+                    console.info('arg: ', arg)
                     this.update({num: arg})
                 }
 
