--- a/docsSrc/src/t3.md
+++ b/docsSrc/src/t3.md
@@ -4,7 +4,7 @@ A webapp is just a dynamic website. This tutorial helps you understand an exampl
 
 In this tutorial we cover these key concepts: appshell, includes, routes, custom tags, link lists, content lists, dependency management and serverless email. This includes dynamic databinding, where the browser ('client') uses data from a JSON response to dynamically render content _client-side_.
 
-We assume that you have already installed the example `website` project as described [here](/t2/); generated with `mbake -s` and running on S3. 
+We assume that you have already installed the example `website` project as described [here](/t2/); generated with `$ mbake -s` and running on S3. 
 
 ### Steps
 
@@ -15,43 +15,46 @@ We assume that you have already installed the example `website` project as descr
 3. Application routes are defined with `a href` tags. Inspect `/layout/nav.pug` for examples. When a user clicks on a link, the URL in the browser changes and the respective content, such as `/home/about/index.html` is returned. Users can bookmark individual URLs. The browser maintains a navigation history so that using its 'Back' button yields the expected result.
 
 4. We use [Riot.js](https://riot.js.org/) for custom tags. We use it when we need a new tag or want to hide functions and vars. To learn how Riot tags are written and used in Pug, inspect `/riotFirst/tags/first-tag.pug`. It looks something like this:
+    ```js
+    first-tag
+        p Dynamic Data:
+        p { num }
 
-        first-tag
-            p Dynamic Data:
-            p { num }
-
-            script.
-                doSomething(arg) {
-                    console.info('arg: ', arg)
-                    this.update({num: arg})
-                }
+        script.
+            doSomething(arg) {
+                console.info('arg: ', arg)
+                this.update({num: arg})
+            }
+    ```
 
     When `'doSomething()'` gets called, it updates the `{num}`.
 
-    You would run `'mbake -t .'` to generate a `first-tag.js` file to include in your page. mbake looks for files that end in `'-tag.pug'`.
+    You would run `'$ mbake -t .'` to generate a `first-tag.js` file to include in your page. mbake looks for files that end in `'-tag.pug'`.
 
     `/riotFirst/index.pug` uses this tag and looks like this:
 
-        head
-            title #{title}
-        body
-            //- include Riot
-            script(src='//cdn.jsdelivr.net/npm/riot@3.11.2/riot.min.js')
-            //- include the tag script
-            script(src='tags/first-tag.min.js')
-            p
-            div
-                //- use the tag
-                first-tag
-            script.
-                var firstTag = riot.mount('first-tag')[0] // get the tag
-                firstTag.doSomething(42) // call the logic
+    ```html
+    head
+        title #{title}
+    body
+        //- include Riot
+        script(src='//cdn.jsdelivr.net/npm/riot@3.11.2/riot.min.js')
+        //- include the tag script
+        script(src='tags/first-tag.min.js')
+        p
+        div
+            //- use the tag
+            first-tag
+        script.
+            var firstTag = riot.mount('first-tag')[0] // get the tag
+            firstTag.doSomething(42) // call the logic
+    ```
 
     You can see it working by going to `/riotFirst/` in the browser.
 
-5. We can render a list of links from a `list.json`. Navigate to the 'News' menu item. Inspect `/news/index.pug`. We use _Axios_ to load the JSON and our custom riot tag `table-tag` to dynamically render the list of links in the browser. Note that we begin loading the JSON as early as possible, in parallel with the UI, so users have to wait less. Now inspect `/news/tag/table-tag.pug` and note the use of Pug `each={items}` with JavaScript to iterate through the items in `list.json`. You use `'mbake -t .'` to generate `table-tag.js`. It is incorporated in `/news/index.pug`. There's no need to write JSON by hand, as you can process a `list.csv` to `list.json` with `'mbake -j .'`. This is a great way to build lists that change over time.
+5. We can render a list of links from a `list.json`. Navigate to the 'News' menu item. Inspect `/news/index.pug`. We use _Axios_ to load the JSON and our custom riot tag `table-tag` to dynamically render the list of links in the browser. Note that we begin loading the JSON as early as possible, in parallel with the UI, so users have to wait less. Now inspect `/news/tag/table-tag.pug` and note the use of Pug `each={items}` with JavaScript to iterate through the items in `list.json`. You use `'$ mbake -t .'` to generate `table-tag.js`. It is incorporated in `/news/index.pug`. There's no need to write JSON by hand, as you can process a `list.csv` to `list.json` with `'$ mbakeW -j .'`. This is a great way to build lists that change over time.
 
-6. For more elaborate situations, such as with a blog or lists of content pages, we can generate a list from items placed in subfolders. Navigate to the 'Team' menu item. Inspect `/team/index.pug`. We use our custom `card-tag` to render a card for each team member, with the data necessary obtained from `/team/items.json`. We generated this JSON with `'mbake -i .'`. This command loops through all the subfolders and aggregates the list of metadata (name and title) from `dat.yaml` in each subfolder. It adds a URL to the JSON items, with the root path prefix obtained from `data_i.yaml`. This is a great way to add or remove items from a website, where all necessary resources are located in a single folder for the item. You can generate an example blog app with `mbake -b`.
+6. For more elaborate situations, such as with a blog or lists of content pages, we can generate a list from items placed in subfolders. Navigate to the 'Team' menu item. Inspect `/team/index.pug`. We use our custom `card-tag` to render a card for each team member, with the data necessary obtained from `/team/items.json`. We generated this JSON with `'$ mbake -i .'`. This command loops through all the subfolders and aggregates the list of metadata (name and title) from `dat.yaml` in each subfolder. It adds a URL to the JSON items, with the root path prefix obtained from `data_i.yaml`. This is a great way to add or remove items from a website, where all necessary resources are located in a single folder for the item. You can generate an example blog app with `$ mbake -b`.
 
 7. Inspect `/assets/js/setup.js`. We use a tiny [dependency manager](https://github.com/muicss/johnnydepp) (862 bytes) to facilitate the loading of required libraries in parallel with the UI. Take another look at `/news/index.pug` and the use of `loadjs.done` and `loadjs.ready`. We use [loadjs](https://github.com/muicss/loadjs) to signal when an inline dependency has been met (a process is 'done' and code is 'ready' for execution).
 
