ca tutorials add

--- a/docsSrc/src/t1.md
+++ b/docsSrc/src/t1.md
@@ -38,7 +38,6 @@ Replace 'wgehner-website' with your bucket name.
 
 __Summary__: With Cloud hosting and mount, you can edit apps from your filesystem and see the edits reflected on the web without extra deployment work.
 
-In the [next tutorial ](/t2/) you will learn about Pug and static data binding.
+In the [next tutorial ](/ca/) you will learn how install the tools for developing in Linux box.
 
-NEXT: Go to [Tutorial 2](/t2/).
-
+NEXT: Go to [Tutorial 2: Mount S3 bucket via goofys using CodeAnywhere editor and Digital Ocean Linux box](/ca/).
